<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Pernumerator</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title text for the empty view, which describes the empty box image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No Items added yet&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an Item</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title for the activity to edit an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Title for the activity to view an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_view_item">View Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor overflow menu option that edits the current item [CHAR LIMIT=20] -->
    <string name="action_edit">Edit</string>

    <!-- Label for image context menu [CHAR LIMIT=20] -->
    <string name="image_context_title">Image Options</string>

    <!-- image context menu item Select New [CHAR LIMIT=20] -->
    <string name="image_context_new">Select New</string>

    <!-- image context menu item Select New [CHAR LIMIT=20] -->
    <string name="image_context_delete">Delete</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when entering edit mode [CHAR LIMIT=NONE] -->
    <string name="editor_edit_mode_on">Edit mode enabled</string>

    <!-- Toast message in editor when entering view mode [CHAR LIMIT=NONE] -->
    <string name="editor_edit_mode_off">View mode enabled</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving Item</string>

    <!-- Toast message in editor when new item has no name to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_noname">Please enter an Item name before saving</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating Item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting Item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this Item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Name</string>

    <!-- Label for owner information in the editor [CHAR LIMIT=30] -->
    <string name="category_owner">Owner</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Numerical Data</string>

    <!-- Label for image in the editor [CHAR LIMIT=30] -->
    <string name="category_image">Image</string>
    <string name="category_image_edit"><![CDATA[Image\n(long tap to edit)]]></string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for barcode field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_barcode">Barcode</string>


    <!-- Text hint for type field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_type">Type</string>

    <!-- Text hint for weight field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_weight">Weight</string>


    <!-- Units for weight of the item (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_item_weight">kg</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>

    <!-- Units for price of the item (EUR) [CHAR LIMIT=5] -->
    <string name="unit_item_price">EUR</string>

    <!-- Text hint for length field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_length">Length</string>
    <!-- Text hint for width field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_width">Width</string>
    <!-- Text hint for height field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_height">Height</string>

    <!-- Units for dim of the item (m) [CHAR LIMIT=5] -->
    <string name="unit_item_dim_L">m L</string>

    <!-- Units for dim of the item (m) [CHAR LIMIT=5] -->
    <string name="unit_item_dim_W">m W</string>

    <!-- Units for dim of the item (m) [CHAR LIMIT=5] -->
    <string name="unit_item_dim_H">m H</string>


    <!-- Label for dropdown menu option if the Item's owner is Other [CHAR LIMIT=20] -->
    <string name="owner_other">Other</string>

    <!-- Label for dropdown menu option if the item owner is Otto [CHAR LIMIT=20] -->
    <string name="owner_otto">Otto</string>

    <!-- Label for dropdown menu option if the item owner is Linde [CHAR LIMIT=20] -->
    <string name="owner_linde">Linde</string>

    <!-- Label for dropdown menu option if the item owner is Linde [CHAR LIMIT=20] -->
    <string name="owner_both">Both</string>

    <!-- Label for the item's type if the type is unknown [CHAR LIMIT=20] -->
    <string name="unknown_type">Unknown type</string>
    <string name="category_barcode">Barcode</string>
    <string name="barcode_button_text">Button Barcode</string>
    <string name="low_storage_error">Low Storage Error</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="default_image_catalog">Picture shown when no items in database.</string>
    <string name="barcode_detection_result">Barcode: </string>
    <string name="barcode_detection_type">Detected Type: </string>
    <string name="title_activity_type">Pernumerator</string>
    <string name="type_header">Type</string>
    <string name="action_export_db">Export to CSV</string>

</resources>
