<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="be.android.pernumerator.EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

            <!-- Type field -->
            <EditText
                android:id="@+id/edit_item_type"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_type"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Owner category -->
    <LinearLayout
        android:id="@+id/container_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_owner" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Owner drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_owner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_measurement" />

        <!-- Input fields weight-->
        <LinearLayout
            android:id="@+id/container_measurement_input_fields"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_item_weight"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_weight"
                    android:inputType="numberDecimal" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_weight_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_item_weight" />
            </RelativeLayout>

            <!-- Input fields price -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_price"
                    android:inputType="numberDecimal" />

                <!-- Units for price (EUR) -->
                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_item_price" />
            </RelativeLayout>
            <!-- Input fields Length -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Length field -->
                <EditText
                    android:id="@+id/edit_item_length"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_length"
                    android:inputType="numberDecimal" />

                <!-- Units for length (m) -->
                <TextView
                    android:id="@+id/label_dim_units_l"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_item_dim" />
            </RelativeLayout>
            <!-- Input fields Width -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Width field -->
                <EditText
                    android:id="@+id/edit_item_width"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_width"
                    android:inputType="numberDecimal" />

                <!-- Units for width (m) -->
                <TextView
                    android:id="@+id/label_dim_units_w"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_item_dim" />
            </RelativeLayout>
            <!-- Input fields Height -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Height field -->
                <EditText
                    android:id="@+id/edit_item_height"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_height"
                    android:inputType="numberDecimal" />

                <!-- Units for height (m) -->
                <TextView
                    android:id="@+id/label_dim_units_h"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_item_dim" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
